# MedPing

./: CMakeLists.txt  History_medPing_Main.cpp  README.md  main.cpp  medPing.h  mp_normalVitalSigns.h
